# lcore-verifier

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  verifier.env.example  verifier.toml.example
src/: config.rs  error.rs  graphql.rs  inputbox_client.rs  main.rs  proof_verifier.rs  receipt_signer.rs  signer.rs  types.rs  verifier.rs
